# server_manager

./: .gitmodules  CMakeLists.txt
config/: config.json
include/: configuration.h  iserver.h  manager_servers.h  tcp_server.h  tcp_session.h  udp_server.h
src/: CMakeLists.txt  configuration.cpp  main.cpp  manager_servers.cpp  tcp_server.cpp  tcp_session.cpp  udp_server.cpp
test/: CMakeLists.txt
test/clients/: CMakeLists.txt  tcp_client.cpp
